tests/errors/array_constructor_with_different_char_lengths.f90
program array_constructor_with_different_char_lengths
    print *, ["a", "b", "ball", "cat"]
end program
